# dsc2024

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  datasets.dvc  pyproject.toml
.dvc/: config
dsc2024/: datasets.py  download_image_vectors.py  features.py  handling.py  images.py  setup.py
notebooks/: catboost-baseline.ipynb  catboost-regression.ipynb  exploratory-analysis.ipynb  graph_create.ipynb  image-analysis.ipynb  try.ipynb
web/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
web/.streamlit/: config.toml
web/airdelay/: datasets.py  flightmap.py  icons.py  main.py  mathutils.py
