[project]
name = "dsc2024"
version = "0.1.0"
description = "ITA Data Science Challenge 2024"
authors = [
    {name = "Manoel Vilela", email = "manoelmvmn@ita.br"},
    {name = "Jorge Luiz Franco", email = "jorge.luiz@usp.com.br"},
]
dependencies = [
    "scikit-learn>=1.4.0",
    "pandas>=2.2.1",
    "catboost>=1.2.3",
    "networkx>=3.3",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool]
[tool.black]
line_length = 120
target_version = ["py310"]

[tool.mypy]
ignore_missing_imports = true


# NOTE(@lerax): dom 21 abr 2024 21:28:09
# ultra fucking slow! take minutes to run mypy with this!
[[tool.mypy.overrides]]
module = "torch.*,torchvision.*"
ignore_errors = true
follow_imports = "skip"
follow_imports_for_stubs = true


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black-macchiato>=1.3.0",
    "black>=22.8.0",
    "coverage>=7.2.5",
    "flake8>=5.0.4",
    "jupyterlab>=3.4.6",
    "mypy==0.981",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.2",
    "pytest>=7.3.1",
    "wordcloud>=1.9.3",
    "MetPy>=1.6.2",
    "dvc[gdrive]>=3.50.0",
]

[tool.pdm.scripts]
lint = {composite = ["flake8", "mypy --install-types --non-interactive"]}
lint-all = {composite = ["lint dsc2024/"]}
test = "pytest -vv -p no:cacheprovider --cov=dsc2024 --cov-report xml:tests/coverage.xml --cov-report term -k"
tests = {composite = ["test test", "coverage json"]}
format = "black egsis/ tests/"
check = {composite = ["lint dsc2024/", "test tests/"]}
notebook = "jupyter lab"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
